# reproducers

ImmCmdListEventQuery/: SlowKernel.cl  main.cpp
callbacks/: CMakeLists.txt  KernelGPU.cl  KernelGPU.hpp  main.cpp
firstTouch/: CMakeLists.txt  common.hpp  firstTouch.cpp  main.cpp
level-zero-callbacks/: Makefile  callback_repro.cpp
opencl-hang-repro/: Makefile  minimal_repro.cpp
template/: KernelGPU.cl  main.cpp
templateNoArgs/: common.hpp  main.cpp
